# flexnet

./: AGENTS.md  Cargo.toml  Taskfile.yml
crates/flexnet-chain/: Cargo.toml  README.md
crates/flexnet-chain/src/: account.rs  address.rs  block.rs  chain.rs  chain_config.rs  chain_id.rs  chain_version.rs  codec.rs  crypto.rs  genesis.rs  hash.rs  lib.rs  rules.rs  state.rs  transaction.rs  transaction_kind.rs  transactions.rs
crates/flexnet-chain/src/rules/: rule_block.rs  rule_transfer.rs
crates/flexnet-chain/src/transactions/: tx_transfer.rs
crates/flexnet-chain/tests/: block.rs  chain.rs  replay.rs  transfer.rs
crates/flexnet-chain/tests/shared/: common.rs  memory_state.rs  mod.rs
crates/flexnet-consensus/: Cargo.toml  README.md
crates/flexnet-consensus/src/: consensus_config.rs  consensus_driver.rs  justification.rs  lib.rs  lock.rs  message.rs  message_kind.rs  messages.rs  polka.rs  ports.rs  proposal.rs  proposal_validator.rs  rules.rs  state.rs  state_input.rs  state_machine.rs  state_output.rs  vote_set.rs
crates/flexnet-core/: Cargo.toml
crates/flexnet-core/src/: account.rs  address.rs  block.rs  chain.rs  codec.rs  constants.rs  error.rs  execute.rs  genesis.rs  hash.rs  lib.rs  signature.rs  simulation.rs  state.rs  transfer.rs
crates/flexnet-core/tests/: block.rs  chain.rs  determinism.rs  genesis.rs  simulation.rs  (+1 more)
docs/: SPEC.md
docs/designs/: 2026-04-12.00.deterministic-core-first.md  2026-04-12.01.core-crates-and-module-layout.md  2026-04-12.02.in-memory-tendermint-style-consensus.md  2026-04-13.00.flexnet-chain-state-abstraction.md
(+21 files in other folders)
