[package]
name = "flexnet-chain"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { workspace = true, features = ["rand_core"] }
hex.workspace = true
rand.workspace = true
sha2.workspace = true
thiserror.workspace = true
zeroize = { workspace = true, features = ["zeroize_derive"] }
